--- a/WebScrap.ipynb
+++ b/WebScrap.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MTahaRF/Web-Scraping/blob/main/WebScrap.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "#Assignment 1 For SAC\n",
         "This assignment scraps the IMDB website top 250 movies and stores the Rank,Movie Name,IMDB score,Year Of Release and Duration of the movies and stores them in .CSV file\n",
@@ -40,14 +30,14 @@
       "source": [
         "!pip install requests\n",
         "!pip install beautifulsoup4\n",
-        "!pip install pandas\n"
+        "!pip install pandas"
       ],
       "metadata": {
         "id": "CHU6vcfwNTbR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b626a3d-6e1c-4426-bf94-df39fab50e3a"
+        "outputId": "f092de8e-751f-47e0-8019-41b10d98a62b"
       },
       "id": "CHU6vcfwNTbR",
       "execution_count": 1,
@@ -84,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "55ab1c19",
       "metadata": {
         "id": "55ab1c19"
@@ -98,6 +88,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bdXWf1m9NJIz"
+      },
+      "id": "bdXWf1m9NJIz",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "#Making a GET request"
@@ -109,14 +109,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "0be11b4f",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0be11b4f",
-        "outputId": "51becdca-9898-43ff-d53a-8c032aa16e25"
+        "outputId": "6d23f6d9-5d8e-4418-98f4-dc182b0cffe2"
       },
       "outputs": [
         {
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "9902c0f5",
       "metadata": {
         "id": "9902c0f5"
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "id": "6cf52f62",
       "metadata": {
         "id": "6cf52f62"
@@ -196,7 +196,7 @@
         "year = []\n",
         "duration = []\n",
         "for i in soup.findAll('span', {'class':'sc-b0691f29-8 ilsLEX cli-title-metadata-item'}):\n",
-        "    if i.getText().isdigit():\n",
+        "    if i.getText().isdigit()  and len(i.getText()) == 4:\n",
         "      year.append(i.getText())\n",
         "    elif 'h' in i.getText() or 'm' in i.getText():\n",
         "      duration.append(i.getText())"
@@ -226,8 +226,38 @@
         "id": "fwCalG3tTLSn"
       },
       "id": "fwCalG3tTLSn",
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "directors = []\n",
+        "for rating in soup.findAll('a', {'class':'ipc-link ipc-link--base dli-director-item'}):\n",
+        "    directors.append(rating.getText())\n",
+        "directors"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UM0m3Sk4LiA9",
+        "outputId": "3e5c9cb7-d180-45c8-ef88-537d07bdc422"
+      },
+      "id": "UM0m3Sk4LiA9",
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -251,7 +281,7 @@
         "id": "QoH7ucwtLpkC"
       },
       "id": "QoH7ucwtLpkC",
-      "execution_count": 17,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -261,7 +291,7 @@
         "id": "89PbbqhZcHFH"
       },
       "id": "89PbbqhZcHFH",
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     }
   ],
@@ -284,8 +314,7 @@
       "version": "3.11.4"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
