--- a/WebScrap.ipynb
+++ b/WebScrap.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MTahaRF/Web-Scraping/blob/main/WebScrap.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "#Assignment 1 For SAC\n",
         "This assignment scraps the IMDB website top 250 movies and stores the Rank,Movie Name,IMDB score,Year Of Release and Duration of the movies and stores them in .CSV file\n",
@@ -40,7 +50,7 @@
         "outputId": "f092de8e-751f-47e0-8019-41b10d98a62b"
       },
       "id": "CHU6vcfwNTbR",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0be11b4f",
-        "outputId": "6d23f6d9-5d8e-4418-98f4-dc182b0cffe2"
+        "outputId": "e31caadd-bdb5-4fbe-fed4-22610e01b6e9"
       },
       "outputs": [
         {
@@ -139,7 +149,27 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def remove_numbers(strings):\n",
+        "  updated_strings = []\n",
+        "  for string in strings:\n",
+        "    dot_index = string.find('.')\n",
+        "    if dot_index != -1:\n",
+        "      updated_strings.append(string[dot_index + 1:])\n",
+        "    else:\n",
+        "      updated_strings.append(string)\n",
+        "  return updated_strings"
+      ],
+      "metadata": {
+        "id": "uVC1ohUhTqu_"
+      },
+      "id": "uVC1ohUhTqu_",
       "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "id": "9902c0f5",
       "metadata": {
         "id": "9902c0f5"
@@ -150,16 +180,6 @@
         "for title in soup.findAll('h3', {'class':'ipc-title__text'}):\n",
         "    movie_title.append(title.getText())\n",
         "del movie_title[251::]\n",
-        "def remove_numbers(strings):\n",
-        "  updated_strings = []\n",
-        "  for string in strings:\n",
-        "    dot_index = string.find('.')\n",
-        "    if dot_index != -1:\n",
-        "      updated_string = string[dot_index + 1:]\n",
-        "      updated_strings.append(updated_string)\n",
-        "    else:\n",
-        "      updated_strings.append(string)\n",
-        "  return updated_strings\n",
         "movie_title = remove_numbers(movie_title)\n",
         "del movie_title[0]"
       ]
@@ -176,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "6cf52f62",
       "metadata": {
         "id": "6cf52f62"
@@ -216,38 +236,8 @@
         "id": "fwCalG3tTLSn"
       },
       "id": "fwCalG3tTLSn",
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "directors = []\n",
-        "for rating in soup.findAll('a', {'class':'ipc-link ipc-link--base dli-director-item'}):\n",
-        "    directors.append(rating.getText())\n",
-        "directors"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UM0m3Sk4LiA9",
-        "outputId": "3e5c9cb7-d180-45c8-ef88-537d07bdc422"
-      },
-      "id": "UM0m3Sk4LiA9",
       "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -271,7 +261,7 @@
         "id": "QoH7ucwtLpkC"
       },
       "id": "QoH7ucwtLpkC",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ],
@@ -294,7 +284,8 @@
       "version": "3.11.4"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
